fix: bordera and overflow of td schedule table

--- a/src/components/ScheduleTable/_styles.pcss
+++ b/src/components/ScheduleTable/_styles.pcss
@@ -3,6 +3,7 @@
 @define-mixin cell-first-child {
   position: sticky;
   left: 0px;
+  outline: 1px solid black;
 
   /*
   Buscando solução para esta gambiarra
